[package]
name = "avr-boot-examples"
version = "0.1.0"
edition = "2021"
authors = ["Peter Smith <peter@orukusaki.co.uk>"]
license = "MIT"
description = "Example firmware code to test avr-boot functions"
readme = "README.md"
repository = "https://github.com/orukusaki/avr-boot"
keywords = ["avr", "booloader", "arduino", "atmega", "attiny", "microcontroller", "simavr", "example"]

[dependencies]
avr-boot = {path = "../avr-boot"}
panic-halt = "0.2.0"
avr-progmem = "0.3.1"
ufmt = "0.2.0"
avr-device = {version = "0.5.4", features=["rt"]}
attiny-hal = {git = "https://github.com/rahix/avr-hal", optional = true}
atmega-hal = {git = "https://github.com/rahix/avr-hal", optional = true}

[features]
hal-atmega = []
hal-attiny = []
extended_addressing = []
atmega48p = ['atmega-hal/atmega48p', 'hal-atmega', 'avr-device/atmega48p']
atmega168 = ['atmega-hal/atmega168', 'hal-atmega', 'avr-device/atmega168']
atmega328p = ['atmega-hal/atmega328p', 'hal-atmega', 'avr-device/atmega328p']
atmega328pb = ['atmega-hal/atmega328pb', 'hal-atmega', 'avr-device/atmega328pb']
atmega32u4 = ['atmega-hal/atmega32u4', 'hal-atmega', 'avr-device/atmega32u4']
atmega1280 = ['atmega-hal/atmega1280', 'hal-atmega', 'extended_addressing', 'avr-device/atmega1280']
atmega2560 = ['atmega-hal/atmega2560', 'hal-atmega', 'extended_addressing', 'avr-device/atmega2560']
atmega1284p = ['atmega-hal/atmega1284p', 'hal-atmega', 'extended_addressing', 'avr-device/atmega1284p']
attiny84 = ['attiny-hal/attiny84', 'hal-attiny', 'avr-device/attiny84']
attiny85 = ['attiny-hal/attiny85', 'hal-attiny', 'avr-device/attiny85']
attiny88 = ['attiny-hal/attiny88', 'hal-attiny', 'avr-device/attiny88']
attiny167 = ['attiny-hal/attiny167', 'hal-attiny', 'avr-device/attiny167']
attiny2313 = ['attiny-hal/attiny2313', 'hal-attiny', 'avr-device/attiny2313']

[profile.release]
lto = true
opt-level = 3 
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
inherits = "release"
opt-level = 3 