[package]
name = "avr-boot"
version = "0.2.1"
edition = "2021"
authors = ["Peter Smith <peter@orukusaki.co.uk>"]
license = "MIT"
description = "Self Programming functions for AVR MCUs"
readme = "../README.md"
repository = "https://github.com/orukusaki/avr-boot"
keywords = ["avr", "booloader", "atmega", "attiny", "microcontroller"]

[dependencies]
const_env--value = "0.1"
cfg-if = "1.0.0"

[build-dependencies]
avr-mcu = "0.3.5"

[profile.release]
lto = true
opt-level = "s" 
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
inherits = "release"
opt-level = "s" 